footer ui added

--- a/index.html
+++ b/index.html
@@ -210,25 +210,79 @@
         <div class="storyServices_card">
           <img src="assets/green-salad.png" alt="Salad" />
           <h4 class="">Catering</h4>
-          <p class="para">Delight your guests with our flavors and presentation</p>
+          <p class="para">
+            Delight your guests with our flavors and presentation
+          </p>
         </div>
         <div class="storyServices_card">
-            <img src="assets/green-salad.png" alt="Salad" />
-            <h4 class="">Catering</h4>
-            <p class="para">Delight your guests with our flavors and presentation</p>
-          </div>
-          <div class="storyServices_card">
-            <img src="assets/green-salad.png" alt="Salad" />
-            <h4 class="">Catering</h4>
-            <p class="para">Delight your guests with our flavors and presentation</p>
-          </div>
-          <div class="storyServices_card">
-            <img src="assets/green-salad.png" alt="Salad" />
-            <h4 class="">Catering</h4>
-            <p class="para">Delight your guests with our flavors and presentation</p>
-          </div>
+          <img src="assets/green-time.png" alt="Clock" />
+          <h4 class="">Fast delivery</h4>
+          <p class="para">
+            We deliver your order promptly to your door
+          </p>
+        </div>
+        <div class="storyServices_card">
+          <img src="assets/green-cart.png" alt="Order" />
+          <h4 class="">Online Ordering</h4>
+          <p class="para">
+            Explore menu & order with ease using our Online Ordering 
+          </p>
+        </div>
+        <div class="storyServices_card">
+          <img src="assets/green-gift.png" alt="Gift" />
+          <h4 class="">Gift Cards</h4>
+          <p class="para">
+            Give the gift of exceptional dining with Foodi Gift Cards
+          </p>
+        </div>
       </div>
     </section>
     <!--story & services ends here -->
+
+    <!-- footer starts here -->
+    <footer>
+      <div class="footer_first_section">
+        <div class="first">
+          <img src="assets/Logo.svg" alt="Logo" />
+          <p>Savor the artistry where every dish is a culinary masterpiece</p>
+        </div>
+        <div>
+          <h3 class="footer_heading">Useful links</h3>
+          <ul class="footer_items">
+            <li>About us</li>
+            <li>Events</li>
+            <li>Blogs</li>
+            <li>FAQ</li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="footer_heading">Main Menu</h3>
+          <ul class="footer_items">
+            <li>Home</li>
+            <li>Offers</li>
+            <li>Menus</li>
+            <li>Reservation</li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="footer_heading">Contact Us</h3>
+          <ul class="footer_items">
+            <li>example@email.com</li>
+            <li>+64 958 248 966</li>
+            <li>Social media</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer_second_section">
+        <div class="socialmedia_icons">
+          <img src="assets/facebook.svg" alt="Facebook" title="Facebook" />
+          <img src="assets/instagram.svg" alt="Instagram" title="Instagram" />
+          <img src="assets/twitter.svg" alt="Twitter" title="Twitter" />
+          <img src="assets/youtube.svg" alt="Youtube" title="Youtube" />
+        </div>
+        <span>Copyright © 2023 Dscode | All rights reserved</span>
+      </div>
+    </footer>
+    <!-- footer ends here -->
   </body>
 </html>
