--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foodi</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@500&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- header starts here  -->
     <header>
+      <img
+        src="assets/hamburger.png"
+        alt="Menu Icon"
+        class="menu_icon"
+        onclick="toggleContainer()"
+      />
       <img src="assets/Logo.svg" alt="Logo" class="logo" />
-      <nav>
+      <nav id="container">
         <ul class="nav_items_container">
-          <li>Home</li>
+          <li class="active">Home</li>
           <li>Menu <img src="assets/arrow-down.svg" alt="Arrow Icon" /></li>
           <li>Services <img src="assets/arrow-down.svg" alt="Arrow Icon" /></li>
           <li>Offers</li>
         </ul>
       </nav>
-      <div class="third_section">
+      <div id="container" class="third_section">
         <img src="assets/search.svg" alt="Search Icon" class="search_icon" />
         <div class="cart_icon_container">
           <span>8</span>
@@ -38,7 +46,6 @@
     <!-- header ends here  -->
 
     <!-- banner section starts here  -->
-
     <section class="banner_section">
       <div class="banner_first_section">
         <h1>Dive into Delights Of Delectable <span>Food</span></h1>
@@ -178,11 +185,11 @@
           and service was impeccable”
         </p>
         <div class="customers">
-          <img src="assets/profiles.png" alt="Profiles" />
+          <img src="assets/profiles.png" alt="Profiles" class="profiles"/>
           <div>
             <h5 class="feedback_heading">Customer Feedback</h5>
             <span class="feedback_section">
-              <img src="assets/star.svg" alt="" />
+              <img src="assets/star.svg" alt="Star" class="star"/>
               <p>4.9</p>
               (18.6k Reviews)</span
             >
@@ -217,15 +224,13 @@
         <div class="storyServices_card">
           <img src="assets/green-time.png" alt="Clock" />
           <h4 class="">Fast delivery</h4>
-          <p class="para">
-            We deliver your order promptly to your door
-          </p>
+          <p class="para">We deliver your order promptly to your door</p>
         </div>
         <div class="storyServices_card">
           <img src="assets/green-cart.png" alt="Order" />
           <h4 class="">Online Ordering</h4>
           <p class="para">
-            Explore menu & order with ease using our Online Ordering 
+            Explore menu & order with ease using our Online Ordering
           </p>
         </div>
         <div class="storyServices_card">
@@ -284,5 +289,25 @@
       </div>
     </footer>
     <!-- footer ends here -->
+
+    <script>
+      function toggleContainer() {
+        var nav = document.querySelector("header nav");
+        var thirdSection = document.querySelector("header .third_section");
+
+        if (window.innerWidth <= 600) {
+          thirdSection.style.display =
+            thirdSection.style.display === "none" ||
+            thirdSection.style.display === ""
+              ? "flex"
+              : "none";
+        }
+
+        nav.style.display =
+          nav.style.display === "none" || nav.style.display === ""
+            ? "flex"
+            : "none";
+      }
+    </script>
   </body>
 </html>
